--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
             <ul>
                     <li><a href= "index.html">HOME</a></li>
-                    <li><a href="AboutMe.html">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href = "Resume_Samantha_Thick.pdf">RESUME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="gallery.html">IMAGE GALLERY</a></li>
