--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <ul>
                     <li><a href= "index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href = "Resume_Samantha_Thick.pdf">RESUME</a></li>
+                    <li><a href = "resume.html">RESUME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="gallery.html">IMAGE GALLERY</a></li>
             </ul>
