--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
                     <li><a href= "index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href = "Resume_Samantha_Thick.pdf">RESUME</a></li>
+                    <li><a href = "resume.html">RESUME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="gallery.html">IMAGE GALLERY</a></li>
             </ul>
@@ -76,8 +76,8 @@
             <a href = "Resume_Samantha_Thick.pdf">Resume</a>
             <p>Experienced Manager with a demonstrated history of working in the sports industry. Skilled in Python (Programming Language), C++, Cascading Style Sheets (CSS), Adobe Photoshop, and HTML5. Strong professional working toward a Bachelor's of Science in Information focused in Information Analysis and User Experience Design from the University of Michigan.</p>
         </div> 
+        -->
     </div>
-    -->
     <footer id="indexfoot">
         <p>All Work &#169 Samantha Thick 2019</p>
     </footer> 
