--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </div> 
         -->
     </div>
-    <footer id="indexfoot">
+    <!-- <footer id="indexfoot">
         <p>All Work &#169 Samantha Thick 2019</p>
-    </footer> 
+    </footer>  -->
 </body>
 </html>
