image gallery added

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         
         <div class="graphicproj">
             <!-- <h1>Graphic Design</h1> -->
-            <img src="images/bbbprogram2.jpg" alt="School Play Logo">
+            <img src="images/lilac_final.jpg" alt="School Play Logo">
             <button type="button" class="collapsible">Graphic Design Projects</button>
             <p>In high school I was the graphic designer for all propoganda pertaining to the drama club production of Bye Bye Birdie. I have taken multiple Adobe Photoshop and Adobe Illustrator oriented courses in both high school and college and experimented with independent projects.<br><br>To see a selection of these projects visit the <a href="gallery.html">Image Gallery</a></p>
         </div>
