--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="intro">
-            <p>Born and raised in the beautiful state of Michigan and current Junior at the University of Michigan in the School of Information.  My interests include data analysis and practical presentation and application of information. I’m passionate about combining the world of technology and society in order to improve communication and make information easy to understand.</p>
+            <p>Born and raised in the beautiful state of Michigan and current Senior at the University of Michigan in the School of Information.  My interests include data analysis and practical presentation and application of information. I’m passionate about combining the world of technology and society in order to improve communication and make information easy to understand.</p>
         </div>
         
         <div class="formcontainer">
