--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
     </div>
     </header>
     <div class="container" id="main">
-    <iframe src="Resume_Samantha_Thick.pdf">
+    <iframe src="SamanthaThickResume.pdf">
         <p>Your browser does not support iframes.</p>
     </iframe>
     </div>
